# apps/backend/src/tasks/dto/task-response.dto.ts
@@ -1,0 +1,40 @@
+import { ApiProperty, ApiPropertyOptional } from '@nestjs/swagger';
+import { TaskPriority, TaskStatus } from '@prisma/client';
+
+export class TaskDto {
+  @ApiProperty()
+  id: string;
+
+  @ApiProperty()
+  farmId: string;
+
+  @ApiProperty()
+  title: string;
+
+  @ApiPropertyOptional()
+  description?: string | null;
+
+  @ApiPropertyOptional()
+  assignedToId?: string | null;
+
+  @ApiProperty({ type: String, format: 'date-time' })
+  dueDate: Date;
+
+  @ApiProperty({ enum: TaskPriority })
+  priority: TaskPriority;
+
+  @ApiProperty({ enum: TaskStatus })
+  status: TaskStatus;
+
+  @ApiPropertyOptional()
+  notes?: string | null;
+
+  @ApiProperty()
+  createdById: string;
+
+  @ApiProperty({ type: String, format: 'date-time' })
+  createdAt: Date;
+
+  @ApiProperty({ type: String, format: 'date-time' })
+  updatedAt: Date;
+}
